Ofc I did something wrong...
Thanks GitHub for showing what was changed...

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1197,6 +1197,8 @@
   "CrewpostorKnowsAllies": "Knows <color=#ff1919>Impostors</color>",
   "AlliesKnowCrewpostor": "Known to <color=#ff1919>Impostors</color>",
   "HasSidekick": "Has <color=#00b4eb>Sidekick</color>",
+  "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
+  "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
   "NonNeutralKillingRolesMinPlayer": "<color=#00ffff>Minimum</color> amount of <color=#ffff00>Non-Killing</color> <color=#ffab1b>Neutrals</color>",
   "NonNeutralKillingRolesMaxPlayer": "<color=#00a5ff>Maximum</color> amount of <color=#ffff00>Non-Killing</color> <color=#ffab1b>Neutrals</color>",
   "NeutralKillingRolesMinPlayer": "<color=#00ffff>Minimum</color> amount of <color=#ffab1b>Neutral</color> <color=#ff0000>Killers</color>",
@@ -1485,9 +1487,9 @@
   "SidekickCountMode.None": "Nothing",
   "SidekickCountMode.Jackal": "<color=#00b4eb>Jackal</color>",
   "SidekickCountMode.Original": "Original Team",
-  "ContagiousCountMode": "<color=#2E8B57>Contagious</color> players count as",
   "JackalCanKillSidekick": "<color=#00b4eb>Jackal</color> can kill <color=#00b4eb>Sidekick</color>",
   "SidekickCanKillJackal": "<color=#00b4eb>Sidekick</color> can kill <color=#00b4eb>Jackal</color>",
+  "ContagiousCountMode": "<color=#2E8B57>Contagious</color> players count as",
   "ContagiousCountMode.None": "Nothing",
   "ContagiousCountMode.Virus": "<color=#2E8B57>Virus</color>",
   "ContagiousCountMode.Original": "Original Team",
