The game works, but no settings yet :skull:

--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -203,7 +203,7 @@
   "Monarch": "Monarca",
   "Farseer": "Profeta",
   "Bloodhound": "Detetive",
-  "Tracker": "Localizador",
+  "Scout": "Localizador",
   "Merchant": "Atribuidor",
   "Retributionist": "Fantasma Assassino",
   "Deputy": "Deputado",
@@ -495,7 +495,7 @@
   "MonarchInfo": "Dê à sua tripulação um poder extra de voto!",
   "FarseerInfo": "Revele funções de outros jogadores",
   "BloodhoundInfo": "Encontre cadáveres e seus assassinos",
-  "TrackerInfo": "Mantenha um localizador em outros jogadores",
+  "ScoutInfo": "Mantenha um localizador em outros jogadores",
   "MerchantInfo": "Venda Atributos e suborne assassinos",
   "RetributionistInfo": "Ajude a Tripulação depois de morrer",
   "DeputyInfo": "Algeme assassinos para aumentar suas recargas",
@@ -728,7 +728,7 @@
   "DovesOfNeaceInfoLong": "(Tripulantes):\\n★Quando Pacifista usa a ventilação, ele resetará o tempo de abate para todos os jogadores com botão de matar. \\n★ Quando ele se torna um Cúmplica, essa habilidade vai apenas funcionar em Tripulantes.",
   "FarseerInfoLong": "(Tripulantes):\\n★Como Profeta você tem uma visão muito limitada mas você pode usar seu botão de abate para revelar a função de um jogador. \\n★ Use o botão de matar para começar a revelar, uma marca 「○」 vai ser mostrada próxima ao alvo. \\n★ Mantenha-se perto do alvo por um tempo definido para revelar sua função, se você se mover para longe do alvo a revelação vai ser cancelada.",
   "BloodhoundInfoLong": "(Tripulantes):\\n★Como Detetive você não pode reportar corpos, pois assim que você tentar reportar você verá uma seta apontando para o assassino do corpo. \\n★ Se a reunião for chamada, as setas somem.",
-  "TrackerInfoLong": "(Tripulantes):\\n★Como Localizador, você pode votar em um jogador na reunião, o qual vai ser marcado a posição dele para você no jogo com setas. \\n★ Em adição, no começo da reunião será exibido para você qual a sala que o jogador esteve, se a opção for ativada.",
+  "ScoutInfoLong": "(Tripulantes):\\n★Como Localizador, você pode votar em um jogador na reunião, o qual vai ser marcado a posição dele para você no jogo com setas. \\n★ Em adição, no começo da reunião será exibido para você qual a sala que o jogador esteve, se a opção for ativada.",
   "MerchantInfoLong": "(Tripulantes):\\n★Como Atribuidor, você vende um add-on aleatório para um jogador aleatório qual tiver todas as suas tarefas concluídas. \\n★Cada add-on vendido lhe rende dinheiro. \\n★ Se você tiver uma certa quantidade de dinheiro, você pode evitar a próxima tentativa de abate. \\n★ O jogador subornado não será capaz de matar você, mas você não sabe quem é.",
   "RetributionistInfoLong": "(Tripulantes):\\n★Como Fantasma Assassino, você pode matar uma quantidade limitada de jogadores depois de sua morte. \\n★ Use /ret [ID do jogador].",
   "DeputyInfoLong": "(Tripulantes):\\n★Como Deputado, use seu botão de abate em um jogador para resetar seu tempo de recarga. \\n★ Se o alvo não tiver um botão de abate, foi um desperdício.",
