--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -203,7 +203,7 @@
   "Monarch": "Monarch",
   "Farseer": "Investigator",
   "Bloodhound": "Coroner",
-  "Tracker": "Tracker",
+  "Scout": "Scout",
   "Merchant": "Merchant",
   "Retributionist": "Retributionist",
   "Deputy": "Deputy",
@@ -495,7 +495,7 @@
   "MonarchInfo": "Give your crew extra voting power!",
   "FarseerInfo": "Reveal roles of other players",
   "BloodhoundInfo": "Find corpses and their killers",
-  "TrackerInfo": "Track other players",
+  "ScoutInfo": "Track other players",
   "MerchantInfo": "Sell add-ons and bribe killers",
   "RetributionistInfo": "Help the crew after you die",
   "DeputyInfo": "Handcuff killers to increase their cooldowns",
@@ -728,7 +728,7 @@
   "DovesOfNeaceInfoLong": "(Crewmates):\\nPacifist resets kill cooldown for all players with kill button on vent/pet. As Madmate, only works on Crewmates.",
   "FarseerInfoLong": "(Crewmates):\\nAs an Investigator, use your kill button to reveal the role of a nearby player. A 「○」 will be displayed next to the reveal target. Stay near the target for a defined time to reveal their role.",
   "BloodhoundInfoLong": "(Crewmates):\\nAs a Coroner you can't report corpses, instead after trying to report the corpse you will see an arrow leading you to the killer. If a meeting is called, the arrows disappear. Depending on the setting, the body you found cannot be reported.",
-  "TrackerInfoLong": "(Crewmates):\\nAs a Tracker, you can vote for a player in the meeting, which will mark their position for you in the game with arrows. In addition, at the beginning of a meeting you will be shown in which room the player was last, if the option is activated.",
+  "ScoutInfoLong": "(Crewmates):\\nAs a Scout, you can vote for a player in the meeting, which will mark their position for you in the game with arrows. In addition, at the beginning of a meeting you will be shown in which room the player was last, if the option is activated.",
   "MerchantInfoLong": "(Crewmates):\\As a merchant, you sell a random add-on to a random player for each task you complete. Each add-on sold earns you money. If you have a certain amount of money, you can avert the next killing attempt against you by bribing the murderer. The bribed player won't be able to kill you, but you don't know who it is. The bribe money used is lost and is not available for additional bribes.",
   "RetributionistInfoLong": "(Crewmates):\\nAs the Retributionist, you can kill a limited amount of players after your death.\\n\\nUse /ret [playerID] to kill.",
   "DeputyInfoLong": "(Crewmates):\\nAs the Deputy, use your kill button on a player to reset their kill cooldown.\\n\\nIf the target does not have a kill button, then the handcuff was a waste.",
@@ -1669,7 +1669,7 @@
   "BloodhoundLeaveDeadBodyUnreportable": "Bodies the <color=#8B0000>Coroner</color> uses can't be reported",
   "BloodhoundNotifyKiller": "Notify Killer about being Tracked",
   "BloodhoundKillerNotify": "The <color=#8B0000>Coroner</color> has an arrow pointing toward you!",
-  "TrackerHideVote": "Hide <color=#3CB371>Tracker</color> Votes",
+  "TrackerHideVote": "Hide <color=#3CB371>Scout</color> Votes",
   "LuckyProbability": "Probability of surviving a kill",
   "DoubleShot.MaxTries": "Maximum Number of Incorrect Guesses",
   "MimicCanSeeDeadRoles": "<color=#ff1919>Mimic</color> can see the roles of dead players",
@@ -2139,7 +2139,7 @@
   "TrackerTitle": "★ Track Reading ★",
   "Temp.Blank": "​",
   "TabGroup.SystemSettings": "System Settings",
-  "TabGroup.GameSettings": "Game Settings",
+  "TabGroup.GameSettings": "Mod Settings",
   "TabGroup.CrewmateRoles": "Crewmate Roles",
   "TabGroup.NeutralRoles": "Neutral Roles",
   "TabGroup.ImpostorRoles": "Impostor Roles",
@@ -2247,6 +2247,7 @@
   "Preset_8": "Preset 8",
   "Preset_9": "Preset 9",
   "Preset_10": "Preset 10",
+  "YouAreHostSuffix": " (YOU!)",
   "Standard": "Standard",
   "SoloKombat": "Solo PVP",
   "ModeSoloKombat": "Mode Solo PVP",
@@ -2908,7 +2909,7 @@
   "VentBlockSuccess": "This vent is now blocked",
   "Enigma": "Enigma",
   "EnigmaInfo": "Get Clues about Killers",
-  "EnigmaInfoLong": "(Crewmates):\\nAs the Enigma, you get a random clue about the killer each meeting, depending on the setting, you may have to report the body to receive a clue. The more tasks you complete the preciser the clues get.",
+  "EnigmaInfoLong": "(Crewmates):\\nAs the Enigma, you get a random clue about the killer each meeting, depending on the setting, you may have to report the body to receive a clue. The more tasks you complete the preciser the clues get.\\n\\n<size=70%><u><b>Light colors:</b></u> Red, Pink, Orange, Yellow, White, Cyan, Lime, Rose, Banana, Coral\\n<u><b>Dark colors:</b></u> Blue, Green, Black, Purple, Brown, Maroon, Gray, Tan</size>",
   "EnigmaClueStage1Tasks": "Number of Tasks to complete to see Stage 1 <color=#676798>Clues</color>",
   "EnigmaClueStage2Tasks": "Number of Tasks to complete to see Stage 2 <color=#676798>Clues</color>",
   "EnigmaClueStage3Tasks": "Number of Tasks to complete to see Stage 3 <color=#676798>Clues</color>",
