--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -203,7 +203,7 @@
   "Monarch": "Monarch",
   "Farseer": "Investigator",
   "Bloodhound": "Coroner",
-  "Tracker": "Tracker",
+  "Scout": "Scout",
   "Merchant": "Merchant",
   "Retributionist": "Retributionist",
   "Deputy": "Deputy",
@@ -495,7 +495,7 @@
   "MonarchInfo": "Дай игрокам дополнительные голоса!",
   "FarseerInfo": "Раскрывай роли других игроков",
   "BloodhoundInfo": "Ищи трупы, а затем найди их убийц",
-  "TrackerInfo": "Отслеживай других игроков",
+  "ScoutInfo": "Отслеживай других игроков",
   "MerchantInfo": "Продавай атрибуты и подкупай <color=#ff1919>убийц</color>",
   "RetributionistInfo": "Помоги членам экипажа после смерти",
   "DeputyInfo": "Сбрасывай перезарядки игроков",
@@ -728,7 +728,7 @@
   "DovesOfNeaceInfoLong": "(Член Экипажа):\\nPacifist может прыгнуть в люк/погладить питомца, чтобы сбросить абсолютно ВСЕ перезарядки игроков, у которых есть кнопка убийства. Pacifist сбрасывает только перезарядки членов экипажа, если является Madmate'ом.",
   "FarseerInfoLong": "(Член Экипажа):\\nInvestigator может раскрыть роль любого игрока с помощью кнопки убийства/питомца. Стойте несколько секунд рядом с тем, кого хотите раскрыть, чтобы раскрыть его роль.",
   "BloodhoundInfoLong": "(Член Экипажа):\\nCoroner не может репортить трупы. Вместо этого, после попытки репорта, у него появится стрелка, которая будет указывать на ближайшего убийцу. В зависимости от настроек, убийца будет уведомлен о преследовании или труп, который попытался зарепортить Coroner, нельзя будет репортить другим игрокам.",
-  "TrackerInfoLong": "(Член Экипажа):\\nTracker может проголосовать за любого игрока во время собрания. На этого игрока будет указывать стрелка. \\nВ зависимости от настроек, Tracker будет видеть комнату, где была его цель перед собранием и (или) стрелки будут цветными.",
+  "ScoutInfoLong": "(Член Экипажа):\\nScout может проголосовать за любого игрока во время собрания. На этого игрока будет указывать стрелка. \\nВ зависимости от настроек, Scout будет видеть комнату, где была его цель перед собранием и (или) стрелки будут цветными.",
   "MerchantInfoLong": "(Член Экипажа):\\nMerchant может продавать атрибуты случайным игрокам, выполняя таски. За продажу он получает монеты. За определённое количество монет, Merchant сможет подкупить убийцу. Убийца не будет способен убить Merchant'а. Тем не менее Merchant не узнает, кого он подкупил.",
   "RetributionistInfoLong": "(Член Экипажа):\\nRetributionist может убить нескольких игроков после смерти, используя команду /ret [id игрока].",
   "DeputyInfoLong": "(Член Экипажа):\\nDeputy может сбрасывать перезарядки кнопок убийства разных игроков. Чтобы сделать это, он должен подойти к нужному игроку и нажать кнопку убийства/погладить питомца около него.\\n\\nЕсли у цели не было кнопки убийства, ничего не произойдёт.",
@@ -1654,7 +1654,7 @@
   "BloodhoundLeaveDeadBodyUnreportable": "Труп, который использовал <color=#8B0000>Coroner</color>, нельзя зарепортить",
   "BloodhoundNotifyKiller": "Уведомить убийцу об отслеживании",
   "BloodhoundKillerNotify": "<color=#8B0000>Coroner</color> имеет стрелку на тебя!",
-  "TrackerHideVote": "Спрятать голоса <color=#3CB371>Tracker</color>'а",
+  "TrackerHideVote": "Спрятать голоса <color=#3CB371>Scout</color>'а",
   "LuckyProbability": "Вероятность выжить",
   "DoubleShot.MaxTries": "Макс. кол-во ошибок",
   "MimicCanSeeDeadRoles": "<color=#ff1919>Mimic</color> видит роли мёртвых игроков",
@@ -2121,7 +2121,7 @@
   "MediumshipTitle": "[★ Голос с того света ★]",
   "MafiaRevengeTitle": "[★ НОВОСТИ О МЕСТИ ★]",
   "RetributionistRevengeTitle": "[★ НОВОСТИ О МЕСТИ ★]",
-  "TrackerTitle": "[★ Сообщение о Tracker'е ★]",
+  "TrackerTitle": "[★ Сообщение о Scout'е ★]",
   "Temp.Blank": "",
   "TabGroup.SystemSettings": "Настройки Системы",
   "TabGroup.GameSettings": "Настройки Игры",
