--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -48,6 +48,7 @@
   "Role.Sheriff": "<color=#ffb347>Sheriff</color>",
   "Role.Knight": "<color=#7A7A7A>Vigilante</color>",
   "Role.Deputy": "<color=#DF9026>Deputy</color>",
+  "UnsupportedMap": "This map is not supported by EHR\\nPlease use a supported map or you'll experience issues",
   "GuesserMode": "Guesser Mode",
   "CrewmatesCanGuess": "<color=#8cffff>Crewmates</color> can guess",
   "ImpostorsCanGuess": "<color=#ff1919>Impostors</color> can guess",
@@ -629,7 +630,7 @@
   "ShapeMasterInfoLong": "(Impostors):\\nThe Shapemaster has no Shapeshift cooldown, but their default Shapeshift duration is shorter.",
   "MareInfoLong": "(Add-ons):\\nAs the Mare, you have a low kill cooldown but can only kill during lights.\\n\\nAdditionally, your name will appear in red during lights.\\n\\nOnly assigned to Impostors and cannot be guessed.",
   "VampireInfoLong": "(Impostors):\\nVampire bites delay death. Meeting kills bitten. Biting Bait = normal kill, self-report.",
-  "WarlockInfoLong": "(Impostors):\\nWarlock can curse a player while not Shapeshifted. If they Shapeshift/Pet after cursing, the closest player to the cursed one is killed, regardless of distance. Only 1 player can be cursed at a time.",
+  "WarlockInfoLong": "(Impostors):\\nWarlock can curse a player while not Shapeshifted. If they Shapeshift/Pet after cursing, the closest player to the cursed one is killed, regardless of distance. Only 1 player can be cursed at a time.\\n\\nKilling, shapeshifting/petting, and cursing all have separate cooldowns. The Warlock may freeze in place for a few seconds after killing via cursed player.",
   "ZombieInfoLong": "(Impostors):\\nZombie has a short kill cooldown, but moves very slowly and has very little vision. Zombie will not be voted out by anyone other than the Dictator, and the movement speed of Zombie will gradually slow down as they make kills or time passes.",
   "AssassinInfoLong": "(Impostors):\\nThe Ninja can use the kill button to mark a target, and if the mark is successful, a shield-animation will be displayed as a reminder. The Ninja can then use shapeshift/pet to teleport to the marked person and kill the marked person. Ninja cannot kill regularly, but may be able to kill regularly after assassination according to the host's settings.",
   "HackerInfoLong": "(Impostors):\\nAnonymous can use Shapeshift to hack into a target. The hacked target will report the body killed by Anonymous, or its own, if there is none. Hacking ignores whether a body can be reported. Hacking Lazy Guy is a waste of time.",
@@ -1708,6 +1709,7 @@
   "DeathReason.etc": "Other",
   "DeathReason.Hack": "Hacked",
   "DeathReason.Curse": "Cursed",
+  "DeathReason.Consumed": "Consumed",
   "Alive": "Alive",
   "Win": " Wins!",
   "Last-": "Last ",
