--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1472,6 +1472,7 @@
   "DeactivationIsVisibleOFF": "<color=#ff4c6f>OFF</color>",
   "MedicResetCooldown": "On kill attempt, reset murderer's cooldown to",
   "MedicShieldedCanBeGuessed": "Guessing ignores <color=#00ff97>Medic</color> shield",
+  "MedicShieldedCanBeJudged": "Judging ignores <color=#00ff97>Medic</color> shield",
   "MedicShieldBreaksOnKillAttempt": "<color=#00ff97>Medic</color> Shield Breaks on Kill Attempt",
   "MedicShieldBreakIsVisible": "Shield Break is Visible",
   "MedicAmountOfShields": "Number of Shields Per Game",
@@ -1742,8 +1743,10 @@
   "RomanticBetOnYou": "The Romantic chose you as their Partner!",
   "VengefulKCD": "<color=#ba2749>Vengeful Romantic</color> Kill Cooldown",
   "VengefulCanVent": "<color=#ba2749>Vengeful Romantic</color> Can Vent",
+  "VengefulHasImpVision": "<color=#ba2749>Vengeful Romantic</color> Has <#ff1919>Impostor</color> Vision",
   "RuthlessKCD": "<color=#D2691E>Ruthless Romantic</color> Kill Cooldown",
   "RuthlessCanVent": "<color=#D2691E>Ruthless Romantic</color> Can Vent",
+  "RuthlessHasImpVision": "<color=#D2691E>Ruthless Romantic</color> Has <#ff1919>Impostor</color> Vision",
   "VengefulRomanticKillButtonText": "Avenge",
   "RomanticProtectPartner": "Your partner is under protection",
   "RomanticIsProtectingYou": "The <color=#FF1493>Romantic</color> is protecting you",
@@ -1751,6 +1754,7 @@
   "RomanticProtectDuration": "Protect Duration",
   "RomanticKnowTargetRole": "<color=#ff1493>Romantic</color> knows their target's role",
   "RomanticBetTargetKnowRomantic": "Target knows who the <color=#ff1493>Romantic</color> is",
+  "RomanticArrows": "Target Has Arrows Pointing to the <color=#ff1493>Romantic</color> and vice versa",
   "Speedrunner": "Speedrunner",
   "SpeedrunnerInfo": "Crew wins if you finish your tasks",
   "SpeedrunnerInfoLong": "(Crewmates):\\nWhen you complete all of your tasks (and you're still alive), the game instantly ends and everyone on the crewmate team will win.",
@@ -2893,6 +2897,8 @@
   "VentguardVentButtonText": "Block",
   "VentguardMaxGuards": "Max number of Vent Blocks",
   "VentguardBlockDoesNotAffectCrew": "<color=#8cffff>Crewmates</color> can use blocked vents",
+  "VentguardNotifyOnBlockedVentUse": "Notify When Someone Tries to Use a Blocked Vent",
+  "VentguardBlocksResetOnMeeting": "Reset Blocked Vents Every Meeting",
   "VentBlockSuccess": "This vent is now blocked",
   "Enigma": "Enigma",
   "EnigmaInfo": "Get Clues about Killers",
@@ -3858,6 +3864,7 @@
   "WardenInfoLong": "(Crewmates):\\nAs the Warden, you can protect someone (optimally a crewmate) to notify them about being in danger and to give them a temporary speed boost.",
   "WardenNotify": "The Warden warns you that you're in danger!",
   "WardenAdditionalSpeed": "Additional Speed",
+  "WardenNotifyTarget": "Notify Target About Danger",
   "Prefix.Warden": "Warden",
   "Specter": "Phantom",
   "SpecterInfo": "Finish Tasks to Win!",
