--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1625,6 +1625,10 @@
   "ResetKillCooldownOn": "Kill Cooldown On Reset",
   "JackalCanRecruitSidekick": "Can recruit <color=#00b4eb>Sidekick</color>",
   "SidekickSettings": "Show Sidekick Settings",
+  "JackalCanRecruitImpostors": "Can recruit <color=#ff1919>Impostors</color>",
+  "SKPromotesToJackal": "<color=#00b4eb>Sidekick</color> gets promoted to <color=#00b4eb>Jackal</color> on <color=#00b4eb>Jackal</color> death",
+  "PromotedSKCanRecruit": "New <color=#00b4eb>Jackal</color> can recruit new <color=#00b4eb>Sidekick</color>",
+  "SKCanKill": "<color=#00b4eb>Sidekick</color> can kill",
   "ImpCanBeInLove": "<color=#ff1919>Impostors</color> can be <color=#ff9ace>in love</color>",
   "CrewCanBeInLove": "<color=#8cffff>Crewmates</color> can be <color=#ff9ace>in love</color>",
   "NeutralCanBeInLove": "<color=#ffab1b>Neutrals</color> can be <color=#ff9ace>in love</color>",
@@ -3777,6 +3781,9 @@
   "Ventriloquist": "Ventriloquist",
   "VentriloquistInfo": "Make Others Say What You Want",
   "VentriloquistInfoLong": "(Impostors):\\nAs the Ventriloquist, you can make others say what you want. First, type /target {id} to target a player. Then, type /chat {message} to make the targeted player say the message.",
+  "Augmenter": "Augmenter",
+  "AugmenterInfo": "Choose Who You Want to Kill",
+  "AugmenterInfoLong": "(Impostors):\\nAs the Augmenter, you can shapeshift into someone to make them your target. The next time you attempt to kill someone, they will be swapped with your target and you will kill your target instead.",
   "Inquirer": "Inquirer",
   "InquirerInfo": "Check a Players' Roles",
   "InquirerInfoLong": "(Crewmates):\\nAs the Inquirer, you can check if a player has a specific role by typing /check {player id} {role}. There's a fail chance.",
