Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1472,6 +1472,7 @@
   "DeactivationIsVisibleOFF": "<color=#ff4c6f>OFF</color>",
   "MedicResetCooldown": "On kill attempt, reset murderer's cooldown to",
   "MedicShieldedCanBeGuessed": "Guessing ignores <color=#00ff97>Medic</color> shield",
+  "MedicShieldedCanBeJudged": "Judging ignores <color=#00ff97>Medic</color> shield",
   "MedicShieldBreaksOnKillAttempt": "<color=#00ff97>Medic</color> Shield Breaks on Kill Attempt",
   "MedicShieldBreakIsVisible": "Shield Break is Visible",
   "MedicAmountOfShields": "Number of Shields Per Game",
@@ -1624,6 +1625,10 @@
   "ResetKillCooldownOn": "Kill Cooldown On Reset",
   "JackalCanRecruitSidekick": "Can recruit <color=#00b4eb>Sidekick</color>",
   "SidekickSettings": "Show Sidekick Settings",
+  "JackalCanRecruitImpostors": "Can recruit <color=#ff1919>Impostors</color>",
+  "SKPromotesToJackal": "<color=#00b4eb>Sidekick</color> gets promoted to <color=#00b4eb>Jackal</color> on <color=#00b4eb>Jackal</color> death",
+  "PromotedSKCanRecruit": "New <color=#00b4eb>Jackal</color> can recruit new <color=#00b4eb>Sidekick</color>",
+  "SKCanKill": "<color=#00b4eb>Sidekick</color> can kill",
   "ImpCanBeInLove": "<color=#ff1919>Impostors</color> can be <color=#ff9ace>in love</color>",
   "CrewCanBeInLove": "<color=#8cffff>Crewmates</color> can be <color=#ff9ace>in love</color>",
   "NeutralCanBeInLove": "<color=#ffab1b>Neutrals</color> can be <color=#ff9ace>in love</color>",
@@ -1742,8 +1747,10 @@
   "RomanticBetOnYou": "The Romantic chose you as their Partner!",
   "VengefulKCD": "<color=#ba2749>Vengeful Romantic</color> Kill Cooldown",
   "VengefulCanVent": "<color=#ba2749>Vengeful Romantic</color> Can Vent",
+  "VengefulHasImpVision": "<color=#ba2749>Vengeful Romantic</color> Has <#ff1919>Impostor</color> Vision",
   "RuthlessKCD": "<color=#D2691E>Ruthless Romantic</color> Kill Cooldown",
   "RuthlessCanVent": "<color=#D2691E>Ruthless Romantic</color> Can Vent",
+  "RuthlessHasImpVision": "<color=#D2691E>Ruthless Romantic</color> Has <#ff1919>Impostor</color> Vision",
   "VengefulRomanticKillButtonText": "Avenge",
   "RomanticProtectPartner": "Your partner is under protection",
   "RomanticIsProtectingYou": "The <color=#FF1493>Romantic</color> is protecting you",
@@ -1751,6 +1758,7 @@
   "RomanticProtectDuration": "Protect Duration",
   "RomanticKnowTargetRole": "<color=#ff1493>Romantic</color> knows their target's role",
   "RomanticBetTargetKnowRomantic": "Target knows who the <color=#ff1493>Romantic</color> is",
+  "RomanticArrows": "Target Has Arrows Pointing to the <color=#ff1493>Romantic</color> and vice versa",
   "Speedrunner": "Speedrunner",
   "SpeedrunnerInfo": "Crew wins if you finish your tasks",
   "SpeedrunnerInfoLong": "(Crewmates):\\nWhen you complete all of your tasks (and you're still alive), the game instantly ends and everyone on the crewmate team will win.",
@@ -2893,6 +2901,8 @@
   "VentguardVentButtonText": "Block",
   "VentguardMaxGuards": "Max number of Vent Blocks",
   "VentguardBlockDoesNotAffectCrew": "<color=#8cffff>Crewmates</color> can use blocked vents",
+  "VentguardNotifyOnBlockedVentUse": "Notify When Someone Tries to Use a Blocked Vent",
+  "VentguardBlocksResetOnMeeting": "Reset Blocked Vents Every Meeting",
   "VentBlockSuccess": "This vent is now blocked",
   "Enigma": "Enigma",
   "EnigmaInfo": "Get Clues about Killers",
@@ -3771,6 +3781,9 @@
   "Ventriloquist": "Ventriloquist",
   "VentriloquistInfo": "Make Others Say What You Want",
   "VentriloquistInfoLong": "(Impostors):\\nAs the Ventriloquist, you can make others say what you want. First, type /target {id} to target a player. Then, type /chat {message} to make the targeted player say the message.",
+  "Augmenter": "Augmenter",
+  "AugmenterInfo": "Choose Who You Want to Kill",
+  "AugmenterInfoLong": "(Impostors):\\nAs the Augmenter, you can shapeshift into someone to make them your target. The next time you attempt to kill someone, they will be swapped with your target and you will kill your target instead.",
   "Inquirer": "Inquirer",
   "InquirerInfo": "Check a Players' Roles",
   "InquirerInfoLong": "(Crewmates):\\nAs the Inquirer, you can check if a player has a specific role by typing /check {player id} {role}. There's a fail chance.",
@@ -3858,6 +3871,7 @@
   "WardenInfoLong": "(Crewmates):\\nAs the Warden, you can protect someone (optimally a crewmate) to notify them about being in danger and to give them a temporary speed boost.",
   "WardenNotify": "The Warden warns you that you're in danger!",
   "WardenAdditionalSpeed": "Additional Speed",
+  "WardenNotifyTarget": "Notify Target About Danger",
   "Prefix.Warden": "Warden",
   "Specter": "Phantom",
   "SpecterInfo": "Finish Tasks to Win!",
