--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -98,12 +98,18 @@
   "GuardianAngel": "Guardian Angel",
   "Impostor": "Impostor",
   "Shapeshifter": "Shapeshifter",
+  "Noisemaker": "Noisemaker",
+  "Tracker": "Tracker",
+  "Phantom": "Phantom",
   "EngineerEHR": "Engineer",
   "ScientistEHR": "Scientist",
   "ShapeshifterEHR": "Shapeshifter",
   "GuardianAngelEHR": "Guardian Angel",
   "ImpostorEHR": "Impostor",
   "CrewmateEHR": "Crewmate",
+  "NoisemakerEHR": "Noisemaker",
+  "TrackerEHR": "Tracker",
+  "PhantomEHR": "Phantom",
   "BountyHunter": "Bounty Hunter",
   "Mare": "Mare",
   "FireWorks": "Fireworker",
@@ -391,6 +397,9 @@
   "GuardianAngelEHRInfo": "Protect the crewmates from the <color=#ff1919>Impostors</color>",
   "ImpostorEHRInfo": "Kill and sabotage",
   "CrewmateEHRInfo": "Do your tasks",
+  "NoisemakerEHRInfo": "Alert the crewmates when you die",
+  "TrackerEHRInfo": "Track players",
+  "PhantomEHRInfo": "Go invisible temporarily",
   "BountyHunterInfo": "Eliminate your target",
   "MareInfo": "Kill in the dark",
   "FireWorksInfo": "Go out with a BANG",
@@ -624,6 +633,9 @@
   "GuardianAngelEHRInfoLong": "(Crewmates):\\nAs the Guardian Angel, you spawn as a ghost and must do your job by protecting crewmates from the Impostors.",
   "ImpostorEHRInfoLong": "(Impostors):\\nAs the Impostor, your goal is to simply kill off the crewmates.\\nYou can sabotage and vent.",
   "CrewmateEHRInfoLong": "(Crewmates):\\nAs the Crewmate, your goal is quite simple. Find and exile the Impostors.\\n\\nCrewmates win by getting rid of all killers or by finishing all their tasks.",
+  "NoisemakerEHRInfoLong": "(Crewmates):\\nAs the Noisemaker, when you die, all crewmates will get alerted and an arrow pointing to your body will appear.",
+  "TrackerEHRInfoLong": "(Crewmates):\\nAs the Tracker, you can track players by placing a tracker on them using your track button.",
+  "PhantomEHRInfoLong": "(Crewmates):\\nAs the Phantom, you can go invisible for a short period of time. During this time, you can't be seen by Crewmates.",
   "BountyHunterInfoLong": "(Impostors):\\nIf you successfully eliminate your assigned target, your next kill cooldown will be reduced, but if you eliminate anyone else, your next kill cooldown will be lengthened; the target will switch after a predetermined time.",
   "FireWorksInfoLong": "(Impostors):\\nAs a Fireworker, you can plant up to three firework bombs using shapeshift/by petting your pet. If you're the last impostor standing, you can use shapeshift/pet to detonate the bombs and cause area damage. But be careful, the bombs can also harm you. If the bombs eliminate all surviving players, it's a victory for the impostors.",
   "SerialKillerInfoLong": "(Impostors):\\nYou have a shorter kill cooldown than other impostors, but you will die if you don't kill before the end of your shapeshift cooldown.",
@@ -745,7 +757,7 @@
   "LawyerInfoLong": "(Neutrals):\\nLawyer has a target to defend, which will be indicated by a diamond 「♦」 next to their name.\\nIf your target wins, you win.\\nIf they lose, you lose.",
   "OpportunistInfoLong": "(Neutrals):\\nIf the Opportunist is alive at the end, they win with the winning team.",
   "MarioInfoLong": "(Neutrals):\\nVector will win alone by venting a certain number of times.",
-  "JackalInfoLong": "(Neutrals):\\nIf Jackal team outnumbers the Crewmate team, Jackal wins. Jackal can kill and may have additional abilities depending on host's settings.",
+  "JackalInfoLong": "(Neutrals):\\nConvert a player with your Kill button. If you die, they will become the new Jackal. You win once you achieve majority and no other evil teams exist.",
   "GodInfoLong": "(Neutrals):\\nGod knows everyone's role from the beginning, and God will win alone as long as he lives to the end. Note: God won't be Lovers.",
   "InnocentInfoLong": "(Neutrals):\\nInnocent players can use the kill button to plant another player, causing them to immediately die. If the planted player is then voted out in a meeting, the Innocent wins. Note that the Jester, Executioner, and Innocent can win together.",
   "PelicanInfoLong": "(Neutrals):\\nAs the Pelican, you can use the kill button and swallow a player alive. Swallowed players are teleported out of the map and cannot interact with the game. In case of an emergency meeting or reporting a dead body, all swallowed players die instantly. Note that this is not a standard way to kill and role skills such as Bodyguard and Veteran are not effective. If you die or disconnect, all previously swallowed players are returned to your location.",
@@ -756,7 +768,7 @@
   "WorkaholicInfoLong": "(Neutrals):\\nWorkaholics win by completing more tasks, maybe even after their death.",
   "CollectorInfoLong": "(Neutrals):\\nCollectors can gather all the votes cast by a target in a meeting. When they collect the specified number of votes, they win, even over exiled players.",
   "PoisonerInfoLong": "(Neutrals):\\nAs the Poisoner, your kills are delayed.\\nKill everyone to win.",
-  "SidekickInfoLong": "(Neutrals):\\nAs the Sidekick, your job is to help the Jackal kill everyone.\\n\\nYou and the Jackal win together.",
+  "SidekickInfoLong": "(Neutrals):\\nHelp your Jackal kill. If they die, you will become the new Jackal. Upon transforming, convert a player with your Kill button. You (and all other Jackals and Sidekicks) win once you achieve majority and no other evil teams exist.",
   "NWitchInfoLong": "(Neutrals):\\nAs the Witch, your job is to survive to the end while preventing the crew from winning the game.\\nYou can make others kill just like a Puppeteer, except you can also make the Lazy Guy and/or Lazy kill since you're using magic rather than manipulation.\\n\\nIf you die, you lose. If crewmates win, you also lose.",
   "ProvocateurInfoLong": "(Neutrals):\\nThe Provocateur can kill any target with the kill button. If the target loses at the end of the game, the Provocateur wins with the winning team.",
   "BloodKnightInfoLong": "(Neutrals):\\nBlood Knights win if they're the last killing role alive and crewmates are equal or less than them. They gain temporary shields after every kill, making them immortal for a few seconds.",
@@ -2544,7 +2556,11 @@
   "RandomizerEffectDurMin": "Minimum Effect Duration",
   "RandomizerEffectDurMax": "Maximum Effect Duration",
   "RandomizerNotifyOpt": "Notify When RNG Event Happens (turn off if events are frequent)",
+  "ImpCanFindMarshall": "Reveal to <#ff1919>Impostors</color>",
+  "NKCanFindMarshall": "Reveal to <#ffab1b>Neutral Killers</color>",
+  "NNKCanFindMarshall": "Reveal to <#ffff00>Neutral Non-Killers</color>",
   "MadmateCanFindMarshall": "Reveal to <#ff1919>MadMates</color>",
+  "MarshallCanBeGuessedOnTaskCompletion": "Can be Guessed on Task Completion",
   "DoesntSpawnOnFungle": "Doesn't Spawn When the Map is <color=#ffa646>Fungle</color>",
   "Blackmailer": "Blackmailer",
   "BlackmailerInfo": "Blackmail Players",
@@ -3920,6 +3936,7 @@
   "RememberedAmnesiac": "You failed to remember your role.",
   "RememberedImpostor": "You remembered you were an Impostor!",
   "RememberedCrewmate": "You remembered you were a Crewmate!",
+  "RememberedLover": "You remembered you were a Lover!",
   "RememberButtonText": "Remember",
   "IncompatibleNeutralMode": "If neutral is incompatible, turn into",
   "IncompatibleCrewmateMode": "If crewmate is incompatible, turn into",
@@ -4150,6 +4167,8 @@
   "ChameleonDisguise": "Disguise",
   "KillCooldownAfterCleaning": "Kill Cooldown On Clean",
   "KillCooldownAfterStoneGazing": "Kill Cooldown On Stone Gaze",
+  "CannotCleanWhenKCDIsntUp": "Cannot Clean Bodies When Kill Cooldown Isn't Up",
+  "CannotStoneGazeWhenKCDIsntUp": "Cannot Stone Gaze Bodies When Kill Cooldown Isn't Up",
   "MedusaStoneBody": "Body stoned",
   "MedusaReportButtonText": "Stone",
   "CursedSoulCurseCooldown": "Soul Snatch Cooldown",
