someone actually noticed this wow

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1732,6 +1732,7 @@
   "Win": " Wins!",
   "Last-": "Last ",
   "DiedR1Warning": "<#ffff00>(Died First in Last Game)</color>",
+  "GLHF": "Good Luck & Have Fun!",
   "DeputyHandcuffCooldown": "Handcuff Cooldown",
   "DeputyHandcuffMax": "Maximum Handcuffs",
   "CanHandcuffSheriff": "Can Handcuff <color=#f8cd46>Sheriff</color>",
