--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -100,7 +100,7 @@
   "Shapeshifter": "Shapeshifter",
   "Noisemaker": "Noisemaker",
   "Tracker": "Tracker",
-  "Phantom": "Phantom",
+  "Phantom": "Phantasm",
   "EngineerEHR": "Engineer",
   "ScientistEHR": "Scientist",
   "ShapeshifterEHR": "Shapeshifter",
@@ -256,7 +256,7 @@
   "Infectious": "Infectious",
   "Virus": "Virus",
   "Pursuer": "Pursuer",
-  "Phantom": "Specter",
+  "Phantasm": "Specter",
   "Jinx": "Jinx",
   "Maverick": "Maverick",
   "CursedSoul": "Cursed Soul",
@@ -549,7 +549,7 @@
   "InfectiousInfo": "Infect everyone",
   "VirusInfo": "Kill and infect everyone",
   "PursuerInfo": "Protect yourself and live to the end!",
-  "PhantomInfo": "Get killed and finish your tasks to win!",
+  "PhantasmInfo": "Get killed and finish your tasks to win!",
   "JinxInfo": "Reflect attacks onto your attackers",
   "MaverickInfo": "Survive until the end to win",
   "CursedSoulInfo": "Snatch souls and steal the win",
@@ -783,7 +783,7 @@
   "InfectiousInfoLong": "(Neutrals):\\nAs the Infectious, your job is to infect as many players as you can.\\n\\nIf you infect all the killers, you then can simply outnumber the crew and win the game.",
   "VirusInfoLong": "(Neutrals):\\nThe virus' goal is to eliminate other players. When a crewmate is killed, their corpse is infected, and the reporting crewmate joins the virus team or dies if the virus isn't voted out. The Virus team wins if they outnumber the Crewmate team.",
   "PursuerInfoLong": "(Neutrals):\\nAs the Pursuer, you can use your ability on someone to make them shoot a blank when they try to kill (= reset their kill cooldown).\\n\\nTo win, just survive to the end of the game.",
-  "PhantomInfoLong": "(Neutrals):\\nAs the Specter, your job is to get killed and finish your tasks.\\nYou can do your tasks while alive.\\nYou cannot win if you're alive.\\nIf you get killed, you win with the winning team if your tasks are completed.",
+  "PhantasmInfoLong": "(Neutrals):\\nAs the Specter, your job is to get killed and finish your tasks.\\nYou can do your tasks while alive.\\nYou cannot win if you're alive.\\nIf you get killed, you win with the winning team if your tasks are completed.",
   "JinxInfoLong": "(Neutrals):\\nAs the Jinx, whenever you are attacked, you jinx them, resulting in them dying to a jinx.\\nThis has limited uses.\\n\\nKill off everyone to win.",
   "MaverickInfoLong": "(Neutrals):\\nAs the Maverick, you can kill much like a Serial Killer.\\n\\nHowever, you win with the winning team rather than alone.\\nIf you die, you lose.",
   "CursedSoulInfoLong": "(Neutrals):\\nAs the Cursed Soul, you snatch the victory if you survive to the end of the game.\\n\\nYou can snatch the win from a Jester or Executioner.\\n\\nAdditionally, you can snatch the souls of other players.\\nSoulless players win with you and count as dead.",
@@ -2146,6 +2146,8 @@
   "RetributionistRevengeTitle": "★ NEWS ★",
   "TrackerTitle": "★ Track Reading ★",
   "Temp.Blank": "​",
+  "TabGroup.VanillaSettings": "Vanilla Settings",
+  "TabGroup.PresetSettings": "Preset Settings",
   "TabGroup.SystemSettings": "System Settings",
   "TabGroup.GameSettings": "Mod Settings",
   "TabGroup.CrewmateRoles": "Crewmate Roles",
@@ -3890,11 +3892,11 @@
   "WardenAdditionalSpeed": "Additional Speed",
   "WardenNotifyTarget": "Notify Target About Danger",
   "Prefix.Warden": "Warden",
-  "Specter": "Phantom",
+  "Specter": "Phantasm",
   "SpecterInfo": "Finish Tasks to Win!",
-  "SpecterInfoLong": "(Crewmates):\\nAs the Phantom, you must finish all of your tasks to win! Depending on a setting, you may also end the game and win alone if you do so!",
+  "SpecterInfoLong": "(Crewmates):\\nAs the Phantasm, you must finish all of your tasks to win! Depending on a setting, you may also end the game and win alone if you do so!",
   "SnatchWin": "Snatches Win (Win With Winning Team if Off)",
-  "Prefix.Specter": "Phantom",
+  "Prefix.Specter": "Phantasm",
   "Bloodmoon": "Bloodmoon",
   "BloodmoonInfo": "Help the Impostors Kill!",
   "BloodmoonInfoLong": "(Impostors):\\nAs the Bloodmoon, you can use your protect button on someone to make them die after a set amount of seconds. They know about this.",
@@ -4344,7 +4346,7 @@
   "WinnerRoleText.Sprayer": "Sprayer Wins!",
   "WinnerRoleText.SoulHunter": "Soul Hunter Wins!",
   "WinnerRoleText.Tiger": "Tiger Wins!",
-  "WinnerRoleText.Specter": "Phantom Wins!",
+  "WinnerRoleText.Specter": "Phantasm Wins!",
   "WinnerRoleText.Hider": "Hiders Win!",
   "WinnerRoleText.Seeker": "Seekers Win!",
   "WinnerRoleText.Taskinator": "Taskinator Wins!",
@@ -4368,7 +4370,7 @@
   "AdditionalWinnerRoleText.VengefulRomantic": "The Vengeful Romantic avenged their lover",
   "AdditionalWinnerRoleText.Postman": "The Postman delivered mail to everyone",
   "AdditionalWinnerRoleText.SoulHunter": "Soul Hunter wins along",
-  "AdditionalWinnerRoleText.Specter": "Phantom wins along",
+  "AdditionalWinnerRoleText.Specter": "Phantasm wins along",
   "AdditionalWinnerRoleText.Default": "{0} wins along",
   "ErrorEndText": "An error occurred",
   "ErrorEndTextDescription": "To avoid crashing, the game was forcibly ended.",
