--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1189,6 +1189,13 @@
   "KillCooldown": "Kill Cooldown",
   "VentCooldown": "Vent Cooldown",
   "MaxInVentTime": "Max In-Vent Time",
+  "NoisemakerImpostorAlert": "Alert <color=#ff1919>Impostors</color>",
+  "NoisemakerAlertDuration": "Alert Duration",
+  "TrackerCooldown": "Track Cooldown",
+  "TrackerDuration": "Track Duration",
+  "TrackerDelay": "Track Delay",
+  "PhantomCooldown": "Invisibility Cooldown",
+  "PhantomDuration": "Invisibility Duration",
   "ControlCooldown": "Control Cooldown",
   "PoisonCooldown": "Poison Cooldown",
   "PoisonerKillDelay": "Poison Kill Delay",
@@ -2113,7 +2120,7 @@
   "ComboRemove": "{0} and {1} will no longer spawn together.",
   "ComboBan": "{0} and {1} will never spawn together.",
   "ComboAllow": "{0} and {1} can now spawn together.",
-  "ComboUsage": "\n<b><u>Usage Format:</u></b>\n/combo [add/ban/remove/allow] [main role] [addon]",
+  "ComboUsage": "\n<b><u>Usage Format:</u></b>\n/combo {add/ban/remove/allow} {main role} {addon} [all]\n<size=70%>By default, the combo is added to the current preset. If you want it to be added for all presets, type 'all' at the end.\nExample: /combo add Sheriff Sidekick all</size>",
   "ERR-000-000-0": "No Error",
   "ERR-000-900-0": "Test Error Lv.0",
   "ERR-000-910-1": "Test Error Lv.1",
@@ -2156,6 +2163,16 @@
   "TabGroup.Addons": "Add-Ons",
   "TabGroup.OtherRoles": "Ghost Roles",
   "TabGroup.TaskSettings": "Game Modifiers",
+  "TabInfo.VanillaSettings": "Base game settings",
+  "TabInfo.PresetSettings": "Pre-set game settings, made by you",
+  "TabInfo.SystemSettings": "Base settings for the mod itself",
+  "TabInfo.GameSettings": "Modded settings that affect the gameplay in general",
+  "TabInfo.CrewmateRoles": "Settings for Crewmate roles",
+  "TabInfo.NeutralRoles": "Settings for Neutral roles",
+  "TabInfo.ImpostorRoles": "Settings for Impostor roles",
+  "TabInfo.Addons": "Settings for Add-ons",
+  "TabInfo.OtherRoles": "Settings for Ghost roles",
+  "TabInfo.TaskSettings": "Modded, specific settings that have a major impact on the game",
   "OtherRoles.CrewmateRoles": "★ Crewmate Roles",
   "OtherRoles.NeutralRoles": "★ Neutral Roles",
   "OtherRoles.ImpostorRoles": "★ Impostor Roles",
@@ -4236,6 +4253,7 @@
   "DoomsayerGuessCountMsg": "You correctly guessed {0} roles",
   "DoomsayerGuessCountTitle": "[ ★ Doomsayer ★ ]",
   "DoomsayerGuessSameRoleAgainMsg": "You tried to guess the same role or add-on that you guessed before",
+  "DoYourTasksPlease": "Please do your tasks!",
   "Developer": "Developer",
   "Sponsor": "Sponsor",
   "OriginalDev": "Original Developer",
