--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1735,6 +1735,7 @@
   "DeathReason.Hack": "Hacked",
   "DeathReason.Curse": "Cursed",
   "DeathReason.Consumed": "Consumed",
+  "DeathReason.BadLuck": "Bad Luck",
   "Alive": "Alive",
   "Win": " Wins!",
   "Last-": "Last ",
@@ -2120,7 +2121,7 @@
   "ComboRemove": "{0} and {1} will no longer spawn together.",
   "ComboBan": "{0} and {1} will never spawn together.",
   "ComboAllow": "{0} and {1} can now spawn together.",
-  "ComboUsage": "\n<b><u>Usage Format:</u></b>\n/combo {add/ban/remove/allow} {main role} {addon} [all]\n<size=70%>By default, the combo is added to the current preset. If you want it to be added for all presets, type 'all' at the end.\nExample: /combo add Sheriff Sidekick all</size>",
+  "ComboUsage": "\n<b><u>Usage Format:</u></b>\n/combo {add/ban/remove/allow} {main role} {addon} [all]\n\n<size=60%>By default, the combo is added to the current preset. If you want it to be added for all presets, type 'all' at the end.\nExample: /combo add Sheriff Sidekick all</size>",
   "ERR-000-000-0": "No Error",
   "ERR-000-900-0": "Test Error Lv.0",
   "ERR-000-910-1": "Test Error Lv.1",
@@ -3592,7 +3593,7 @@
   "TaskerInfoLong": "FINISH TASKS FIRST TO WIN",
   "HotPotato": "HOT POTATO",
   "ModeHotPotato": "Gamemode: Hot Potato",
-  "ModeDescribe.HotPotato": "In the Hot Potato gamemode, one player always has the hot potato, and they can pass it to anyone by going near someone. Each X seconds (X is set by the host), the player who holds the hot potato dies. The last player alive wins!",
+  "ModeDescribe.HotPotato": "In the Hot Potato gamemode, one player always has the hot potato, and they can pass it to anyone by going near someone. Each X seconds (X is set by the host), the player who holds the hot potato dies. The last player alive wins!\\n\\nNote: You cannot pass the hot potato to the player that just gave it to you (their name is colored in cyan, it means they cannot get the hot potato) unless there are only 2 players left.",
   "HotPotato_Time": "The Holder of the Hot Potato is Killed Every",
   "HotPotato_HolderSpeed": "Speed of the Player Holding the Hot Potato",
   "HotPotato_Range": "Pass Range",
@@ -3772,12 +3773,20 @@
   "AADone": "The process has finished",
   "Nimble": "Nimble",
   "NimbleInfo": "Grants Vent Access",
-  "NimbleInfoLong": "\\nGrants vent access for crewmate roles.",
+  "NimbleInfoLong": "\\nGrants Vent Access for Crewmate Roles.",
   "Prefix.Nimble": "Nimble",
   "Physicist": "Physicist",
   "PhysicistInfo": "Grants Portable Vitals Access",
-  "PhysicistInfoLong": "\\nGrants portable vitals access for crewmate roles.",
+  "PhysicistInfoLong": "\\nGrants portable vitals access for crewmate Roles.",
   "Prefix.Physicist": "Physicist",
+  "Finder": "Finder",
+  "FinderInfo": "Grants Access to Tracking Players",
+  "FinderInfoLong": "\\nGrants access to tracking players for crewmate roles.",
+  "Prefix.Finder": "Finder",
+  "Noisy": "Noisy",
+  "NoisyInfo": "Grants Noisemaker Ability",
+  "NoisyInfoLong": "\\nGrants noisemaker ability for crewmate roles.",
+  "Prefix.Noisy": "Noisy",
   "Clairvoyant": "Clairvoyant",
   "ClairvoyantInfo": "Know Remaining Killer Counts",
   "ClairvoyantInfoLong": "(Crewmates):\\nAs the Clairvoyant, you can see the remaining impostor and neutral killer counts by entering a vent or petting your pet.",
@@ -3847,6 +3856,13 @@
   "EnrageCooldown": "Enrage Cooldown",
   "EnrageDuration": "Enrage Duration",
   "TigerRadius": "Enrage Radius",
+  "RouleteGrandeur": "Roulette Grandeur",
+  "RouleteGrandeurInfo": "Play Russian Roulette",
+  "RouleteGrandeurInfoLong": "(Neutrals):\\nAs the Roulette Grandeur, you can play Russian Roulette to reduce your kill cooldown after the next kill you make. Vent to cycle between the amount of risk (bullets) you put in. There are 5 slots. If you land on a bullet, you die. If you survive, your kill cooldown is permanately reduced by a set amount <i>multiplied by the risk (bullets) you put in</i>! Sabotage or pet your pet to play a round with the chosen risk factor.",
+  "RG.KCDReduction": "Kill Cooldown Reduction (multiplied by the amount of bullets put in)",
+  "RG.Hit": "<#ffff00>The hit landed on one of your bullets!\\nBetter luck next time!</color>",
+  "RG.NoHit": "<#00ffa5>You survived, despite putting in {0} bullets.\\nYour kill cooldown was reduced by {1}s!</color>",
+  "RG.Suffix": "<#00ffa5>Bullets:</color> <b>{0}</b>",
   "Agitater": "Agitator",
   "AgitaterInfo": "Pass a Bomb onto others",
   "AgitaterInfoLong": "(Neutrals):\\nAs the Agitater, your premise is essentially Hot Potato.\\n\\nUse your kill button on a player to pass the bomb.\\nThis can only be done once per round.\\n\\nThe player who receives the bomb will be notified when receiving said bomb, in which they need to pass it to another player by getting near a player.\\n\\nWhen a meeting is called, the player with the bomb dies.\\n\\nIf trying to pass to Pestilence or a Veteran on alert, the bombed player dies instead.\\nOptionally, the Agitater cannot receive the bomb.",
@@ -3938,6 +3954,7 @@
   "Haunter.RevealMadmates": "Can Reveal <#ff1919>Madmates</color>",
   "Haunter.NumberOfReveals": "Number of Players Revealed on Task Completion",
   "Prefix.Haunter": "Haunter",
+  "GotGhostRoleNotify": "<#ffff00>You were assigned a ghost role!</color>",
   "NumOfTasks": "Number of Tasks to Finish",
   "MasochistKillMax": "Amount of attacks needed to win",
   "GuessMasochist": "You just tried to guess a Masochist!\\nThey're now one step closer to winning!\\n\\nDo not guess them again.",
