--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2302,8 +2302,12 @@
   "SabotageButtonText": "Sabotage",
   "AbilityButtonText.Shapeshifter": "Shapeshift",
   "AbilityButtonText.Engineer": "Vent",
-  "AbilityButtonText.Scientist": "Check Vitals",
+  "AbilityButtonText.Scientist": "Vitals",
   "AbilityButtonText.GuardianAngel": "Protect",
+  "AbilityButtonText.Crewmate": "Haunt",
+  "AbilityButtonText.Impostor": "Haunt",
+  "AbilityButtonText.Tracker": "Track",
+  "AbilityButtonText.Noisemaker": "Haunt",
   "GauloisKillButtonText": "Speed Up",
   "SniperSnipeButtonText": "Snipe",
   "FireWorksExplosionButtonText": "Detonate",
@@ -3608,8 +3612,8 @@
   "Speedrun_TaskFinishWins": "First to Finish Tasks Wins Immediately (skips killing phase)",
   "Speedrun_TimeStacksUp": "Time Remainder Adds to Next Time Limit (time stacks up)",
   "Speedrun_TimeLimit": "Time Limit to Do a Task or Kill",
-  "Speedrun_CanKillSuffixInfo": "<#00ffa5>Time: {3}s</color>\\n<size=80%><#ffff00>Alive players: <#ffab1b>{0}</color>/{1}</color>\\n<#ff1919>Kill everyone to win</color>\\n<size=70%><#888888>Apart from you, <#ffffff>{2}</color> players can kill</color></size></size>",
-  "Speedrun_DoTasksSuffixInfo": "<#00ffa5>Time: {4}s</color>\\n<size=70%><#888888>Alive players: <#ffffff>{1}</color>/{2}</color>\\n<size=80%><#ffff00>Remaining tasks: {0}</color>\\n<#00ffa5>Finish your tasks</color>\\n<size=70%><#ffab1b><#ffffff>{3}</color> players can kill</color></size></size></size>",
+  "Speedrun_CanKillSuffixInfo": "<#00ffa5>Time:</color> <#ffffff>{3}s</color>\\n<size=80%><#ffff00>Alive players: <#ffab1b>{0}</color>/{1}</color>\\n<#ff1919>Kill everyone to win</color>\\n<size=70%><#888888>Apart from you, <#ffffff>{2}</color> players can kill</color></size></size>",
+  "Speedrun_DoTasksSuffixInfo": "<#00ffa5>Time:</color> <#ffffff>{4}s</color>\\n<size=70%><#888888>Alive players: <#ffffff>{1}</color>/{2}</color>\\n<size=80%><#ffff00>Remaining tasks: {0}</color>\\n<#00ffa5>Finish your tasks</color>\\n<size=70%><#ffab1b><#ffffff>{3}</color> players can kill</color></size></size></size>",
   "Speedrun_CompletedTasks": "<#00ff00>You're done with tasks!</color>",
   "Runner": "Speedrunner",
   "RunnerInfo": "COMPLETE TASKS AND KILL EVERYONE FIRST TO WIN",
@@ -3797,12 +3801,12 @@
   "SafeguardSuffix": "<#00ffa5>You're shielded</color>",
   "Telekinetic": "Telekinetic",
   "TelekineticInfo": "Execute Different Actions to Help the Crew",
-  "TelekineticInfoLong": "(Crewmates):\\nSees a timer at all times. Dies if it gets above 60s. At first, petting does nothing. They can vent to change modes. They can only have one mode activated at a time. To execute an action, pet your pet. Frozen for 5s after using some powers, timer is 40s after a meeting. Each action increases the timer by a certain amount when used (indicated next to the action name in the following list in brackets)\\n\\n<u><b>Modes:</b></u>\\n<i>Teleport Target:</i> teleports the nearest player outside the map (+40s)\\n<i>Teleport Self:</i> teleports themself outside the map (+30s)\\n<i>Freeze:</i> freezes the nearest player (+35s)\\n<i>Kill:</i> instantly kills the nearest player (+60s)\\n<i>Shield:</i> gives them a shield lasting for some time (+45s)\\n<i>Speed:</i> gives them increased speed for some time (+30s)\\n<i>Doors:</i> opens all closed doors instantly (+35s)",
+  "TelekineticInfoLong": "(Crewmates):\\nSees a timer at all times. Dies if it gets above 60s. At first, petting does nothing. They can vent to change modes. They can only have one mode activated at a time. To execute an action, pet your pet. Frozen for 5s after using some powers, timer is 40s after a meeting. Each action increases the timer by a certain amount when used (indicated next to the action name in the following list in brackets)<size=80%>\\n\\n<u><b>Modes:</b></u>\\n<i>Teleport Target:</i> teleports the nearest player outside the map (+40s)\\n<i>Teleport Self:</i> teleports themself outside the map (+30s)\\n<i>Freeze:</i> freezes the nearest player (+35s)\\n<i>Kill:</i> instantly kills the nearest player (+60s)\\n<i>Shield:</i> gives them a shield lasting for some time (+45s)\\n<i>Speed:</i> gives them increased speed for some time (+30s)\\n<i>Doors:</i> opens all closed doors instantly (+35s)</size>",
   "Telekinetic.FreezeDuration": "Freeze Duration",
   "Telekinetic.ShieldDuration": "Shield Duration",
   "Telekinetic.SpeedDuration": "Speed Duration",
   "Telekinetic.IncreasedSpeed": "Increased Speed",
-  "Telekinetic.Suffix": "Mode: {0}",
+  "Telekinetic.Suffix": "<#00ffa5>Mode:</color> <b>{0}</b>",
   "Telekinetic.Mode.TeleportTarget": "Teleport Target",
   "Telekinetic.Mode.TeleportSelf": "Teleport Self",
   "Telekinetic.Mode.Freeze": "Freeze",
@@ -3830,7 +3834,7 @@
   "AugmenterInfo": "Choose Who You Want to Kill",
   "AugmenterInfoLong": "(Impostors):\\nAs the Augmenter, you can shapeshift into someone to make them your target. The next time you attempt to kill someone, they will be swapped with your target and you will kill your target instead.",
   "Inquirer": "Inquirer",
-  "InquirerInfo": "Check a Players' Roles",
+  "InquirerInfo": "Check Players' Roles",
   "InquirerInfoLong": "(Crewmates):\\nAs the Inquirer, you can check if a player has a specific role by typing /check {player id} {role}. There's a fail chance.",
   "Inquirer.FailChance": "Chance to Show Incorrect Result",
   "Inquirer.MessageTrue": "<#00ff00><b><u>Correct!</u></b></color> That player has the role you entered.",
