--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3865,7 +3865,7 @@
   "RouleteGrandeurInfoLong": "(Neutrals):\\nAs the Roulette Grandeur, you can play Russian Roulette to reduce your kill cooldown after the next kill you make. Vent to cycle between the amount of risk (bullets) you put in. There are 5 slots. If you land on a bullet, you die. If you survive, your kill cooldown is permanately reduced by a set amount <i>multiplied by the risk (bullets) you put in</i>! Sabotage or pet your pet to play a round with the chosen risk factor.",
   "RG.KCDReduction": "Kill Cooldown Reduction (multiplied by the amount of bullets put in)",
   "RG.Hit": "<#ffff00>The hit landed on one of your bullets!\\nBetter luck next time!</color>",
-  "RG.NoHit": "<#00ffa5>You survived, despite putting in {0} bullets.\\nYour kill cooldown was reduced by {1}s!</color>",
+  "RG.NoHit": "<#00ffa5>You survived, despite putting in <#8cffff>{0}</color> bullets.\\nYour kill cooldown was reduced by <#8cffff>{1}s</color>!</color>",
   "RG.Suffix": "<#00ffa5>Bullets:</color> <b>{0}</b>",
   "Agitater": "Agitator",
   "AgitaterInfo": "Pass a Bomb onto others",
